<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical"
    android:background="@mipmap/background"
    tools:context="net.lm.access_web_music_store.ui.MainActivity">


   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="50dp"
       android:background="@drawable/custom_border"
       android:gravity="center"
       android:padding="5dp"
       android:orientation="horizontal" >

      <ProgressBar
          android:id="@+id/pb_scan_music"
          android:layout_width="100dp"
          android:layout_height="100dp" />

      <TextView
          android:id="@+id/tv_scan_music"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/scan_music"
          android:textColor="#0000ff"
          android:textSize="25sp" />
   </LinearLayout>

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="50dp"
       android:background="@drawable/custom_border"
       android:gravity="center"
       android:orientation="horizontal"
       android:padding="5dp" >

      <TextView
          android:id="@+id/tv_play_mode"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/play_mode"
          android:textSize="13sp" />

      <RadioGroup
          android:id="@+id/rg_play_mode"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:orientation="horizontal" >

         <RadioButton
             android:id="@+id/rb_order"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:checked="true"
             android:text="@string/order"
             android:textSize="13sp" />

         <RadioButton
             android:id="@+id/rb_random"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/random"
             android:textSize="13sp" />

         <RadioButton
             android:id="@+id/rb_loop"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/loop"
             android:textSize="13sp" />
      </RadioGroup>
   </LinearLayout>

   <ListView
       android:id="@+id/lv_music_name"
       android:layout_width="match_parent"
       android:layout_height="0dp"
       android:layout_weight="8" />

   <View
       android:layout_width="match_parent"
       android:layout_height="1dp"
       android:layout_marginBottom="5dp"
       android:layout_marginTop="5dp"
       android:background="#aaaaaa" />

   <TextView
       android:id="@+id/tv_music_name"
       android:layout_width="wrap_content"
       android:layout_height="0dp"
       android:layout_weight="0.5"
       android:textColor="#0000ff"
       android:textSize="16sp" />

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="0dp"
       android:layout_marginBottom="10dp"
       android:layout_marginTop="10dp"
       android:layout_weight="1"
       android:gravity="center_vertical"
       android:orientation="horizontal" >

      <TextView
          android:id="@+id/tv_current_position"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:textColor="#ff0000" />

      <SeekBar
          android:id="@+id/sb_music_progress"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="6" />

      <TextView
          android:id="@+id/tv_duration"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:textColor="#ff00ff" />
   </LinearLayout>

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="0dp"
       android:layout_weight="1"
       android:gravity="center"
       android:orientation="horizontal" >


      <Button
          android:id="@+id/btn_previous"
          android:layout_width="60dp"
          android:layout_height="50dp"
          android:background="@drawable/previous_button_selector"
          android:onClick="doPrevious" />

      <Button
          android:id="@+id/btn_play_pause"
          android:layout_width="60dp"
          android:layout_height="50dp"
          android:background="@drawable/play_button_selector"
          android:onClick="doPlayOrPause" />

      <Button
          android:id="@+id/btn_next"
          android:layout_width="60dp"
          android:layout_height="50dp"
          android:background="@drawable/next_button_selector"
          android:onClick="doNext" />
   </LinearLayout>

</LinearLayout>
